# pyri-robotics-motion-program-browser

./: README.md  pyproject.toml  setup.py
src/pyri/robotics_motion_program_browser/: robotics_mp_plugin_init.py
src/pyri/robotics_motion_program_browser/components/: motion_opt_page.py  motion_program_opt_acc_data_component.html  motion_program_opt_acc_data_component.py  motion_program_opt_component.html  motion_program_opt_component.py  motion_program_opt_execution_component.py  motion_program_opt_input_data_component.html  motion_program_opt_input_data_component.py  motion_program_opt_motion_program_execution_component.html  motion_program_opt_motion_program_execution_component.py  motion_program_opt_motion_program_generation_component.html  motion_program_opt_motion_program_generation_component.py  motion_program_opt_motion_program_update_component.html  motion_program_opt_motion_program_update_component.py  motion_program_opt_redundancy_resolution_component.html  motion_program_opt_redundancy_resolution_component.py  robotics_mp_components.py
src/pyri/robotics_motion_program_browser/dialogs/: new_motion_program_from_trajectory_dialog.html  new_motion_program_from_trajectory_dialog.py  opt_results_panel.html  robotics_mp_variable_dialogs.py
src/pyri/robotics_motion_program_browser/panels/: motion_program_opt_panel.html  motion_program_opt_panel.py  motion_program_opt_panel_execution_component.html  motion_program_opt_panel_input_data_component.html  motion_program_opt_panel_log_component.html  motion_program_opt_panel_motion_program_execution_component.html  motion_program_opt_panel_motion_program_generation_component.html  motion_program_opt_panel_redundancy_resolution_component.html  robotics_mp_panels.py
